# aegis-hunt

./: .gitignore  Cargo.toml  Dockerfile  README.md  run.sh  setup.sh
configs/: default.toml  scope.example.json
crates/api/: Cargo.toml
crates/api/src/: campaign.rs  dashboard.rs  lib.rs  server.rs
crates/api/static/: dashboard.html
crates/auto/: Cargo.toml
crates/auto/src/: campaign.rs  lib.rs  notify.rs  schedule.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  target.rs  types.rs
crates/events/: Cargo.toml
crates/events/src/: bus.rs  types.rs
crates/exploit/: Cargo.toml
crates/exploit/src/: lfi.rs  lib.rs  orchestrator.rs  sqli.rs  ssrf.rs  xss.rs
crates/graph/: Cargo.toml
crates/graph/src/: graph.rs  lib.rs  paths.rs  risk.rs
crates/hunter/: Cargo.toml
crates/hunter/src/: chains.rs  cloud.rs  endpoints.rs  jwt.rs  lib.rs  params.rs  profiles.rs
crates/hunter/src/browser/: browser_js.rs  mod.rs
crates/intel/: Cargo.toml
crates/intel/src/: correlation.rs  exploitdb.rs  lib.rs  version_match.rs
crates/jsengine/: Cargo.toml
crates/jsengine/src/: downloader.rs  extractor.rs  lib.rs  patterns.rs
crates/llm/: Cargo.toml
crates/llm/src/: analysis.rs  client.rs  lib.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: lib.rs  manager.rs  plugin.rs  registry.rs
crates/plugin/src/plugins/: js_scanner.rs  sqli_scanner.rs
crates/recon/: Cargo.toml
crates/recon/src/: httpx.rs  lib.rs  nuclei.rs  plugin.rs  registry.rs  subfinder.rs
crates/reporting/: Cargo.toml
crates/reporting/src/: bounty.rs  chains.rs  html.rs  json.rs  lib.rs  markdown.rs  poc.rs  sarif.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: engine.rs  lib.rs  monitor.rs  notify.rs  queue.rs  ratelimit.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs  proxy.rs  session.rs
crates/storage/: Cargo.toml
crates/storage/src/: async_db.rs  db.rs  lib.rs  migrations.rs  models.rs
crates/verify/: Cargo.toml
crates/verify/src/: content.rs  cors.rs  crtsh.rs  lfi.rs  lib.rs  ssrf.rs  takeover.rs  waf.rs
docs/: 2026-05-19-aegis-phase1-mvp.md  2026-05-19-aegis-phase2-p0-plan.md  2026-05-19-autovuln-pipeline-design.md  2026-05-19-phase2-remaining-plan.md  2026-05-19-phase3-plan.md  PROGRESS.md  dashboard.md
src/: main.rs
