[package]
name = "aegis-api"
version = "0.1.0"
edition = "2021"

[dependencies]
aegis-core = { path = "../core" }
aegis-events = { path = "../events" }
aegis-storage = { path = "../storage" }
aegis-scheduler = { path = "../scheduler" }
aegis-recon = { path = "../recon" }
aegis-reporting = { path = "../reporting" }
aegis-graph = { path = "../graph" }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["cors"] }
