[package]
name = "aegis-auto"
version = "0.1.0"
edition = "2021"

[dependencies]
aegis-core = { path = "../core" }
aegis-events = { path = "../events" }
aegis-storage = { path = "../storage" }
aegis-scheduler = { path = "../scheduler" }
aegis-recon = { path = "../recon" }
aegis-intel = { path = "../intel" }
aegis-verify = { path = "../verify" }
aegis-hunter = { path = "../hunter" }
aegis-exploit = { path = "../exploit" }
aegis-reporting = { path = "../reporting" }
aegis-graph = { path = "../graph" }
aegis-session = { path = "../session" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
