[package]
name = "aegis-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
aegis-core = { path = "../core" }
aegis-intel = { path = "../intel" }
petgraph = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
