[package]
name = "aegis-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
aegis-core = { path = "../core" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
