[package]
name = "aegis-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
aegis-core = { path = "../core" }
aegis-events = { path = "../events" }
aegis-recon = { path = "../recon" }
aegis-storage = { path = "../storage" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
