[package]
name = "aegis-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
aegis-core = { path = "../core" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
